# rblx_rich_presence

./: .gitignore  .golangci.yml  Cargo.toml  README.md  a.txt  build.rs  config.go  go.mod  go.sum  joindata.go  main.go  presence.go  roblox.go  setup_notwin.go  setup_windows.go  update.go
.github/workflows/: build.yml  lint.yml  rust.yml
src/: logs.rs  main.rs  models.rs  roblox.rs  tray_menu.rs  utils.rs
