[package]
name = "rblx_rich_presence"
description = "Roblox with Rich Presence"
version = "0.1.10"
authors = ["thelennylord <32369619+thelennylord@users.noreply.github.com>"]
edition = "2018"
readme = "README.md"
license = "MIT"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.6"
url = "2.1.1"
winreg = "0.7.0"
sysinfo = "0.14.7"
serde_json = "1.0.55"
json = "0.12.4"
rustcord = "0.2.4"
base64 = "0.12.3"
regex = "1.3.9"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.10.6", features = ["blocking", "json"] }
winapi = { version = "0.3", features = ["shellapi", "libloaderapi", "errhandlingapi", "impl-default"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"